--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Web Check",
-  "name": "Lissy93/Web-Check",
+  "short_name": "Website Check",
+  "name": "Lissy93/Website-Check",
   "icons": [
     {
       "src": "favicon.ico",
