--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "build": "astro check && astro build",
     "dev:vercel": "PLATFORM='vercel' npx vercel dev",
     "dev:netlify": "PLATFORM='netlify' npx netlify dev",
-    "dev:api": "DISABLE_GUI='true' PORT='3001' nodemon server",
-    "dev:astro": "PUBLIC_API_ENDPOINT=http://localhost:3001/api astro dev",
-    "dev": "concurrently -c magenta,cyan -n backend,frontend 'yarn dev:api' 'yarn dev:astro'"
+    "dev:api": "cross-env DISABLE_GUI='true' PORT='3001' nodemon server_fixed.js",
+    "dev:astro": "cross-env PUBLIC_API_ENDPOINT=http://localhost:3001/api astro dev",
+    "dev": "concurrently -c magenta,cyan -n backend,frontend 'npm run dev:api' 'npm run dev:astro'"
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
@@ -26,7 +26,9 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.7.1",
+    "astro-i18n": "^2.2.4",
     "axios": "^1.4.8",
+    "babel-plugin-styled-components": "^2.1.4",
     "cheerio": "^1.0.0-rc.12",
     "chrome-aws-lambda": "^10.1.0",
     "chromium": "^3.0.3",
@@ -38,12 +40,16 @@
     "express-rate-limit": "^7.2.0",
     "framer-motion": "^11.2.6",
     "got": "^14.2.1",
+    "i18next": "^25.7.4",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "pm2": "^5.3.1",
     "psl": "^1.9.0",
     "puppeteer": "^22.8.0",
     "puppeteer-core": "^22.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^16.5.1",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.23.0",
     "react-simple-maps": "^3.0.0",
